--- a/packages/phoenix-builder/package.json
+++ b/packages/phoenix-builder/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "rollup": "^2.58.0"
+    "rollup": "^2.58.0",
+    "styled-components": "^5.3.3"
   }
 }
