--- a/packages/phoenix-button/package.json
+++ b/packages/phoenix-button/package.json
@@ -5,7 +5,6 @@
   "keywords": [],
   "author": "willy <willydaconceicao@habi.co>",
   "license": "ISC",
-  "main": "lib/phoenix-button.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -25,6 +24,10 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "clsx": "^1.1.1"
-  }
+    "clsx": "^1.1.1",
+    "styled-components": "^5.3.3"
+  },
+  "main": "dist/phoenix-button.cjs.js",
+  "module": "dist/phoenix-button.esm.js",
+  "src": "lib/phoenix-button.js"
 }
