--- a/packages/phoenix-text/package.json
+++ b/packages/phoenix-text/package.json
@@ -5,7 +5,6 @@
   "keywords": [],
   "author": "willy <willydaconceicao@habi.co>",
   "license": "ISC",
-  "main": "lib/phoenix-text.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -26,5 +25,8 @@
   },
   "dependencies": {
     "clsx": "^1.1.1"
-  }
+  },
+  "main": "dist/phoenix-text.cjs.js",
+  "module": "dist/phoenix-text.esm.js",
+  "src": "lib/phoenix-text.js"
 }
