--- a/packages/phoenix/package.json
+++ b/packages/phoenix/package.json
@@ -5,7 +5,6 @@
   "keywords": [],
   "author": "willy <willydaconceicao@habi.co>",
   "license": "ISC",
-  "main": "lib/phoenix.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -26,5 +25,8 @@
   },
   "devDependencies": {
     "@willytest/phoenix-builder": "^0.0.0"
-  }
+  },
+  "main": "dist/phoenix.cjs.js",
+  "module": "dist/phoenix.esm.js",
+  "src": "lib/phoenix.js"
 }
