--- a/packages/phoenix-button/package.json
+++ b/packages/phoenix-button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@willytest/phoenix-button",
+  "name": "@habitech/phoenix-button",
   "version": "1.0.1",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
@@ -21,7 +21,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@willytest/phoenix-builder": "^1.0.0",
+    "@habitech/phoenix-builder": "^1.0.0",
     "react": "^17.0.2"
   },
   "dependencies": {
