--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
-  "packages": ["packages/*"],
-  "version": "1.0.1",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.0.2",
   "hoist": true,
   "stream": true,
   "bootstrap": {
-    "npmClientArgs": ["--no-package-lock"]
+    "npmClientArgs": [
+      "--no-package-lock"
+    ]
   }
 }
